# its-bot

./: .env_example  .environment_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  compliments.txt  compliments_sql.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.precomcache/: db.db
common/: compliments.sql
database/: models.py  utils.py
migration/: env.py
migration/versions/: e2c4246648df_initial.py
migrations/: env.py
migrations/versions/: 759aaa6ffc3c_.py  7c1c2832f1e8_.py
models/: __init__.py  compliments.py  messages.py  users.py
states/: messages.py
utils/: config.py  db.py  finders.py  insert_compliments.py  keyboards.py  message_type_sender.py  mistral.py  mixins.py  models.py  senders.py  states.py
